--- a/wp-content/themes/vieuxmoulin/resources/css/content/text-media.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/text-media.scss
@@ -1,19 +1,32 @@
-.section_container{
-
+.text-media__section_container {
   display: flex;
   flex-direction: column;
   margin-top: 3.125rem;
-
+  text-align: center;
 }
 
 .text-media {
   &__position {
+    position: relative;
+    .lightblue,.yellow{
+      position: absolute;
+      left: -3.5rem;
+      top: -2rem;
+      z-index: -1;
+    }
+    .darkblue,.green{
+      position: absolute;
+      right: -3.5rem;
+      top: -2rem;
+      z-index: -1;
+    }
+
     &--left {
       order: -1;
     }
 
     &--right {
-    order: 1;
+      order: -1;
     }
   }
 
@@ -22,22 +35,24 @@
 
     }
 
-    &-title {
 
+    &-headline {
+      font-size: 1.5rem;
+      order: -1;
+      margin-bottom: 1.25rem;
     }
 
     &-text {
-
-    }
-
-    &-link {
-
+      margin-bottom: 1.25rem;
     }
   }
 
   &__image {
     width: 300px;
     height: 300px;
+    object-fit: cover;
+    border-radius: 50px;
+    margin-bottom: 1.25rem;
   }
 
   &__video {
