--- a/wp-content/themes/vieuxmoulin/resources/css/general/footer.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/general/footer.scss
@@ -9,6 +9,8 @@
   text-align: center;
   gap: 3.125rem;
   padding: 3.125rem 2rem;
+  margin-top: 1.5rem;
+
   @include tablet-up{
     gap: clamp(1.25rem, 2vw, 3.125rem);
     flex-direction: row;
