--- a/wp-content/themes/vieuxmoulin/resources/css/content/landing-page.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/landing-page.scss
@@ -1,4 +1,4 @@
-.section_container {
+.landing-page__section_container {
   display: flex;
   flex-direction: column;
   margin-top: 3.125rem;
@@ -10,7 +10,7 @@
   .darkblue {
     position: absolute;
     z-index: -1;
-    right: -11rem;
+    right: -2rem;
     top: -2rem;
   }
 
