--- a/wp-content/themes/vieuxmoulin/resources/css/content/landing-page.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/landing-page.scss
@@ -1,7 +1,16 @@
+@import "../settings/colors.scss";
+@import "../settings/breakpoints";
+
 .landing-page__section_container {
   display: flex;
   flex-direction: column;
   margin-top: 3.125rem;
+  @include tablet-up {
+    flex-direction: row;
+    gap: clamp(0.8rem, 5vw, 5rem);
+    justify-content: center;
+
+  }
 }
 
 .landing-page {
@@ -27,8 +36,16 @@
   }
 
   &__content {
-    &-container {
 
+    &-container {
+      position: relative;
+      .wave {
+        display: none;
+        @include tablet-up {
+          display: block;
+          position: absolute;
+        }
+      }
     }
 
     &-supline {
@@ -47,6 +64,12 @@
 
     &-text {
       margin-bottom: 1.25rem;
+      max-width: 360px;
+    }
+    &-second_text{
+      @include tablet-up{
+          width: 360px;
+      }
     }
   }
 
@@ -57,11 +80,16 @@
     object-fit: cover;
     border-radius: 50px;
     margin-bottom: 1.25rem;
+    @include tablet-up {
+      width: 360px;
+      height: 216px;
+    }
   }
 
   &__video {
     width: 300px;
     height: 300px;
   }
+
 
 }
