--- a/wp-content/themes/vieuxmoulin/resources/css/content/text-media.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/text-media.scss
@@ -1,20 +1,29 @@
+@import "../settings/colors.scss";
+@import "../settings/breakpoints";
+
 .text-media__section_container {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   margin-top: 3.125rem;
   text-align: center;
+  @include tablet-up {
+    grid-template-columns: auto auto;
+    grid-template-rows: 40px auto;
+    column-gap: clamp(0.8rem, 5vw, 5rem);
+  }
 }
 
 .text-media {
   &__position {
     position: relative;
-    .lightblue,.yellow{
+
+    .lightblue, .yellow {
       position: absolute;
       left: -3.5rem;
       top: -2rem;
       z-index: -1;
     }
-    .darkblue,.green{
+
+    .darkblue, .green {
       position: absolute;
       right: -3.5rem;
       top: -2rem;
@@ -23,10 +32,18 @@
 
     &--left {
       order: -1;
+      @include tablet-up {
+        grid-column: 1;
+        grid-row: 1 / 3;
+      }
     }
 
     &--right {
       order: -1;
+      @include tablet-up {
+        grid-column: 2;
+        grid-row: 1 / 3;
+      }
     }
   }
 
@@ -35,15 +52,20 @@
 
     }
 
+    &-container-text {
+
+    }
 
     &-headline {
       font-size: 1.5rem;
       order: -1;
       margin-bottom: 1.25rem;
+
     }
 
     &-text {
       margin-bottom: 1.25rem;
+      text-align: start;
     }
   }
 
