--- a/wp-content/themes/vieuxmoulin/resources/css/content/background-list.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/background-list.scss
@@ -1,3 +1,5 @@
+@import "../settings/colors.scss";
+@import "../settings/breakpoints";
 
 .background-list__section_container {
   display: flex;
@@ -5,11 +7,18 @@
   margin-top: 3.125rem;
   text-align: center;
   position: relative;
+
 }
 
 .background-list {
-  &-container {
-
+  &-content {
+    display: flex;
+    flex-direction: column;
+      gap: 1.25rem;
+    @include tablet-up {
+      display: flex;
+      flex-direction: row;
+    }
   }
 
   &-headline {
@@ -22,17 +31,17 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    @include tablet-up {
+      width: 33%;
+    }
     &:nth-of-type(1) {
       border-radius: 50px;
       background: #A9D6DC;
-      margin-bottom: 1.25rem;
     }
 
     &:nth-of-type(2) {
       border-radius: 50px;
       background: #FEDA6F;
-      margin-bottom: 1.25rem;
 
     }
 
@@ -53,8 +62,8 @@
   }
 
   &__image {
-  width: 170px;
-  height: 170px;
+    width: 170px;
+    height: 170px;
   }
 }
 
