--- a/wp-content/themes/vieuxmoulin/resources/css/content/background-list.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/background-list.scss
@@ -14,7 +14,7 @@
   &-content {
     display: flex;
     flex-direction: column;
-      gap: 1.25rem;
+    gap: 1.25rem;
     @include tablet-up {
       display: flex;
       flex-direction: row;
@@ -26,6 +26,7 @@
     margin-bottom: 1.25rem;
   }
 
+
   &-item {
     padding: 1.25rem;
     display: flex;
@@ -34,6 +35,7 @@
     @include tablet-up {
       width: 33%;
     }
+
     &:nth-of-type(1) {
       border-radius: 50px;
       background: #A9D6DC;
@@ -67,4 +69,7 @@
   }
 }
 
+h2 + .background-list-text {
+  margin-bottom: 1.25rem;
+}
 
