--- a/wp-content/themes/vieuxmoulin/resources/css/content/media.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/media.scss
@@ -14,6 +14,8 @@
     display: flex;
     gap: 1.25rem;
     position: relative;
+    justify-content: center;
+
     a {
       display: block;
       position: absolute;
