--- a/wp-content/themes/vieuxmoulin/resources/css/content/background-list.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/background-list.scss
@@ -38,18 +38,18 @@
 
     &:nth-of-type(1) {
       border-radius: 50px;
-      background: #A9D6DC;
+      background: $lightblue;
     }
 
     &:nth-of-type(2) {
       border-radius: 50px;
-      background: #FEDA6F;
+      background:$yellow;
 
     }
 
     &:nth-of-type(3) {
       border-radius: 50px;
-      background: #94D699;
+      background: $green;
     }
 
     .background-list-headline {
