--- a/wp-content/themes/vieuxmoulin/resources/css/content/button.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/button.scss
@@ -1,3 +1,5 @@
+@import "../settings/colors.scss";
+@import "../settings/breakpoints";
 .button {
   &__image {
     width: 100%;
@@ -15,14 +17,14 @@
   &-button1, &-button2 {
     padding: 1rem;
     border-radius: 50px;
-    background: #2B5E99;
+    background: $darkblue;
     width: 6rem;
     text-align: center;
     a{
-      color: #F0F0F0;
+      color: $white;
     }
     .inactive {
-      background-color: #2B5E99;
+      background-color: $darkblue;
       opacity: 0.7;
     }
   }
