add underline to h2

--- a/wp-content/themes/vieuxmoulin/resources/css/content/double-text-media.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/double-text-media.scss
@@ -6,4 +6,13 @@
     font-size: 1.75rem;
     text-align: center;
   }
+  &-headliners{
+    position: relative;
+    .underline{
+      position: absolute;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: -1;
+    }
+  }
 }
