--- a/wp-content/themes/vieuxmoulin/resources/css/content/background-list.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/background-list.scss
@@ -4,10 +4,12 @@
 .background-list__section_container {
   display: flex;
   flex-direction: column;
-  margin-top: 3.125rem;
+  margin-top: clamp(3.125rem, 5vw, 6.25rem);
   text-align: center;
   position: relative;
-
+  @include desktop-xl-up {
+    margin-top: 6.25rem;
+  }
 }
 
 .background-list {
@@ -22,8 +24,11 @@
   }
 
   &-headline {
-    font-size: 1.5rem;
+    font-size: clamp(1.5rem, 3vw, 2.25rem);
     margin-bottom: 1.25rem;
+    @include desktop-xl-up {
+      font-size: 2.25rem;
+    }
   }
 
 
@@ -53,12 +58,14 @@
     }
 
     .background-list-headline {
-      font-size: 1.25rem;
       font-weight: 800;
     }
 
     .background-list-headline, .background-list-text {
-      font-size: 1rem;
+      font-size: clamp(1rem, 2vw, 1.25rem);
+      @include desktop-xl-up{
+        font-size: 1.25rem;
+      }
     }
 
   }
@@ -71,5 +78,9 @@
 
 h2 + .background-list-text {
   margin-bottom: 1.25rem;
+  font-size: clamp(1rem, 2vw, 1.25rem);
+  @include desktop-xl-up{
+    font-size: 1.25rem;
+  }
 }
 
