--- a/wp-content/themes/vieuxmoulin/resources/css/content/button.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/button.scss
@@ -1,5 +1,6 @@
 @import "../settings/colors.scss";
 @import "../settings/breakpoints";
+
 .button {
   &__image {
     width: 100%;
@@ -18,11 +19,20 @@
     padding: 1rem;
     border-radius: 50px;
     background: $darkblue;
-    width: 6rem;
+    width: clamp(6rem, 12vw, 12rem);
     text-align: center;
-    a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    a {
       color: $white;
+      font-size: clamp(1rem, 2vw, 1.25rem);
+      @include desktop-xl-up {
+        font-size: 1.25rem;
+      }
     }
+
     .inactive {
       background-color: $darkblue;
       opacity: 0.7;
