--- a/wp-content/themes/vieuxmoulin/resources/css/content/double-text-media.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/double-text-media.scss
@@ -1,18 +1,39 @@
+@import "../settings/colors.scss";
+@import "../settings/breakpoints";
+
 .double-text-media {
-&__section_container{
-  margin-top: 3.125rem;
-}
-  &-headline{
-    font-size: 1.75rem;
-    text-align: center;
+  &__section_container {
+
+    margin-top: clamp(3.125rem, 5vw, 6.25rem);
+    @include desktop-xl-up {
+      margin-top: 6.25rem;
+    }
   }
-  &-headliners{
+  &-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &-headline {
+    font-size: clamp(1.75rem, 3vw, 2.5rem);
+    text-align: center;
+    @include desktop-xl-up {
+      font-size: 2.5rem;
+    }
+  }
+
+  &-headliners {
     position: relative;
-    .underline{
+    display: inline-block;
+
+    .underline {
       position: absolute;
-      top: 50%; left: 50%;
+      top: 50%;
+      left: 50%;
       transform: translate(-50%, -50%);
       z-index: -1;
+      width: 200%;
+      height: 200%;
     }
   }
 }
