--- a/wp-content/themes/vieuxmoulin/resources/css/content/list.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/list.scss
@@ -4,9 +4,11 @@
 .list__section_container {
   display: flex;
   flex-direction: column;
-  margin-top: 3.125rem;
+  margin-top: clamp(3.125rem, 5vw, 6.25rem);
   text-align: center;
-
+  @include desktop-xl-up {
+    margin-top: 6.25rem;
+  }
   .list {
     &-media {
     position: relative;
@@ -27,7 +29,7 @@
 
     }
     &-headline {
-      font-size: 1.5rem;
+      font-size: clamp(1.5rem, 3vw, 2.25rem);
       margin-bottom: 1.25rem;
       @include desktop-xl-up {
         font-size: 2.25rem;
@@ -56,7 +58,7 @@
       }
 
       .list-headline, .list-text {
-        font-size: 1rem;
+        font-size: clamp(1rem, 2vw, 1.25rem);
         @include desktop-xl-up{
           font-size: 1.25rem;
         }
@@ -65,8 +67,8 @@
     }
 
     &__image {
-      width: 300px;
-      height: 300px;
+      width: clamp(270px, 23vw, 370px);
+      height: clamp(270px, 23vw, 370px);
       object-fit: cover;
       border-radius: 50px;
       margin-bottom: 1.25rem;
