fix bug before et after background

--- a/wp-content/themes/vieuxmoulin/resources/css/general/soutien.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/general/soutien.scss
@@ -23,7 +23,10 @@
     bottom: 0;
     @include tablet-up {
       height: 4%;
-
+    }
+    @include desktop-up {
+      height: 3%;
+      bottom: -1px;
     }
   }
 
@@ -38,7 +41,10 @@
     left: -0.1rem;
     @include tablet-up {
       height: 4%;
-
+    }
+    @include desktop-up {
+      height: 3%;
+      top: -1px;
     }
   }
 }
