--- a/wp-content/themes/vieuxmoulin/resources/css/general/soutien.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/general/soutien.scss
@@ -49,7 +49,7 @@
   }
 }
 
-.section_container_donation {
+.section_container_donation,.section_container_financier {
   .text-media__content-text {
     p {
       &:nth-of-type(2), &:nth-of-type(4), &:nth-of-type(5) {
