--- a/wp-content/themes/vieuxmoulin/resources/css/content/button.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/button.scss
@@ -16,26 +16,36 @@
   }
 
   &-button1, &-button2 {
-    padding: 1rem;
-    border-radius: 50px;
-    background: $darkblue;
-    width: clamp(6rem, 12vw, 12rem);
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
     a {
+      padding: 1rem;
+      border-radius: 50px;
+      background: $darkblue;
+      width: clamp(6rem, 12vw, 12rem);
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       color: $white;
       font-size: clamp(1rem, 2vw, 1.25rem);
       @include desktop-xl-up {
         font-size: 1.25rem;
       }
+
+      &:hover, &:focus {
+        padding: 1.2rem;
+        background-color: #033265;
+      }
+
+    }
+
+    .inactive:hover, .inactive:focus {
+      opacity: 1;
     }
 
     .inactive {
-      background-color: $darkblue;
       opacity: 0.7;
     }
+
+
   }
 }
