--- a/wp-content/themes/vieuxmoulin/resources/css/content/donation.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/donation.scss
@@ -39,6 +39,11 @@
 
     &-item {
       position: relative;
+      transition: transform 0.3s ease;
+      &:hover,
+      &:focus {
+        transform: scale(1.05);
+      }
 
       a {
         display: block;
