--- a/wp-content/themes/vieuxmoulin/resources/css/content/media.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/media.scss
@@ -1,30 +1,41 @@
 @import "../settings/colors.scss";
 @import "../settings/breakpoints";
-.media{
-&__section_container{
-  margin-top: clamp(3.125rem, 5vw, 6.25rem);
-  text-align: center;
-  position: relative;
-  @include desktop-xl-up {
-    margin-top: 6.25rem;
+
+.media {
+  &__section_container {
+    margin-top: clamp(3.125rem, 5vw, 6.25rem);
+    text-align: center;
+    position: relative;
+    @include desktop-xl-up {
+      margin-top: 6.25rem;
+    }
+
   }
 
-}
-  &-content{
+  &-content {
     display: flex;
     gap: 1.25rem;
     justify-content: center;
 
   }
-  &-headline{
+
+  &-headline {
     margin-bottom: clamp(1.25rem, 3vw, 2rem);
     font-size: clamp(1.75rem, 3vw, 2.5rem);
     @include desktop-xl-up {
       font-size: 2.5rem;
     }
   }
-  &-item{
+
+  &-item {
     position: relative;
+    transition: transform 0.3s ease;
+
+    &:hover,
+    &:focus {
+      transform: scale(1.05);
+    }
+
     a {
       display: block;
       position: absolute;
@@ -37,7 +48,8 @@
       z-index: 1;
       opacity: 0;
     }
-    .media-headline{
+
+    .media-headline {
       margin-bottom: 0.625rem;
       font-size: clamp(1.25rem, 3vw, 2rem);
       @include desktop-xl-up {
@@ -45,7 +57,8 @@
       }
     }
   }
-  &__image{
+
+  &__image {
     width: clamp(140px, 17vw, 280px);
     height: clamp(140px, 17vw, 280px);
     object-fit: cover;
