--- a/wp-content/themes/vieuxmoulin/resources/css/content/background-list.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/background-list.scss
@@ -42,18 +42,18 @@
     }
 
     &:nth-of-type(1) {
-      border-radius: 50px;
+      border-radius: 3.125rem;
       background: $lightblue;
     }
 
     &:nth-of-type(2) {
-      border-radius: 50px;
+      border-radius: 3.125rem;
       background:$yellow;
 
     }
 
     &:nth-of-type(3) {
-      border-radius: 50px;
+      border-radius: 3.125rem;
       background: $green;
     }
 
@@ -71,8 +71,8 @@
   }
 
   &__image {
-    width: 170px;
-    height: 170px;
+    width: 10.625rem;
+    height: 10.625rem;
   }
 }
 
