--- a/wp-content/themes/vieuxmoulin/resources/css/content/button.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/button.scss
@@ -4,8 +4,12 @@
 .button {
   &__image {
     width: 100%;
-    max-height: 250px;
+    max-height: 15.625rem;
     object-fit: cover;
+    max-width: 75rem;
+  }
+  &-media{
+    text-align: center;
   }
 
   &-container {
@@ -18,7 +22,7 @@
   &-button1, &-button2 {
     a {
       padding: 1rem;
-      border-radius: 50px;
+      border-radius: 3.125rem;
       background: $darkblue;
       width: clamp(6rem, 12vw, 12rem);
       text-align: center;
