--- a/wp-content/themes/vieuxmoulin/resources/css/content/donation.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/donation.scss
@@ -21,7 +21,7 @@
 
     &__content-text {
       margin-bottom: 1.25rem;
-      max-width: 600px;
+      max-width: 37.5rem;
       font-size: clamp(1rem, 2vw, 1.25rem);
       @include desktop-xl-up {
         font-size: 1.25rem;
@@ -60,10 +60,10 @@
     }
 
     &__image {
-      width: clamp(120px, 15vw, 200px);
-      height: clamp(120px, 15vw, 200px);
+      width: clamp(7.5rem, 15vw, 12.5rem);
+      height: clamp(7.5rem, 15vw, 12.5rem);
       object-fit: cover;
-      border-radius: 50px;
+      border-radius: 3.125rem;
     }
   }
 }
