--- a/wp-content/themes/vieuxmoulin/resources/css/content/text-media.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/text-media.scss
@@ -9,7 +9,7 @@
 
   @include tablet-up {
     grid-template-columns: auto auto;
-    grid-template-rows: 50px auto;
+    grid-template-rows: 3.125rem auto;
     column-gap: clamp(0.8rem, 5vw, 5rem);
   }
   @include desktop-xl-up {
@@ -86,7 +86,7 @@
       font-size: clamp(1rem, 2vw, 1.25rem);
 
       margin-bottom: 1.25rem;
-      max-width: 600px;
+      max-width: 37.5rem;
       @include tablet-up {
         text-align: start;
       }
@@ -104,17 +104,16 @@
   }
 
   &__image {
-    width: clamp(300px, 25vw, 400px);
-    height: clamp(300px, 25vw, 400px);
+    width: clamp(18.75rem, 25vw, 25rem);
+    height: clamp(18.75rem, 25vw, 25rem);
     object-fit: cover;
-    border-radius: 50px;
+    border-radius: 3.125rem;
     margin-bottom: 1.25rem;
-
   }
 
   &__video {
-    width: 300px;
-    height: 300px;
+    width: 18.75rem;
+    height: 18.75rem;
   }
 
 }
