--- a/wp-content/themes/vieuxmoulin/resources/css/general/header.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/general/header.scss
@@ -31,7 +31,7 @@
   &__nav {
     input {
       display: grid;
-      width: 40px;
+      width: 2.5rem;
       aspect-ratio: 1;
       overflow: hidden;
       -webkit-appearance: none;
@@ -89,7 +89,7 @@
       right: 0;
       bottom: 0;
       justify-content: center;
-      row-gap: 30px;
+      row-gap: 1.875rem;
       transform: translate(-100%);
       will-change: transform, opacity;
       opacity: 0;
