Create contact page and function

--- a/wp-content/themes/vieuxmoulin/resources/css/styles.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/styles.scss
@@ -2,6 +2,7 @@
 @use 'general/footer';
 @use 'general/soutien';
 @use 'general/front-page';
+@use 'general/contact';
 @use 'content/text-media';
 @use 'content/double-text-media';
 @use 'content/media';
