--- a/wp-content/themes/vieuxmoulin/resources/css/general/contact.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/general/contact.scss
@@ -15,6 +15,14 @@
 
   .green, .lightblue {
     position: absolute;
+    transition: transform 0.3s ease;
+    @include tablet-up {
+      transform: scale(1.05);
+      transition: transform 0.3s ease;
+    }
+    @include desktop-up {
+      transform: scale(1.15);
+    }
   }
 
   .lightblue {
