--- a/wp-content/themes/vieuxmoulin/resources/css/content/text-media.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/content/text-media.scss
@@ -20,7 +20,8 @@
 .text-media {
   &__position {
     position: relative;
-    .lightblue,.yellow,.darkblue,.green,.light{
+
+    .lightblue, .yellow, .darkblue, .green, .light {
       position: absolute;
       transition: transform 0.3s ease;
       @include tablet-up {
@@ -83,13 +84,16 @@
     &-headline {
       font-size: clamp(1.5rem, 3vw, 2.25rem);
       order: -1;
-      margin-bottom: 1.25rem;
       @include tablet-up {
         text-align: start;
       }
       @include desktop-xl-up {
         font-size: 2.25rem;
       }
+    }
+    &-container{
+      margin-top: 1.25rem;
+
     }
 
     &-text {
