add some changing stuff

--- a/wp-content/themes/vieuxmoulin/resources/css/styles.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/styles.scss
@@ -11,6 +11,7 @@
 @use 'content/background-list';
 @use 'content/button';
 @use 'content/donation';
+@use 'content/gallery';
 @use 'utils/reset';
 @use 'utils/hidden';
 @use 'utils/theme';
