--- a/wp-content/themes/vieuxmoulin/resources/css/general/footer.scss
+++ b/wp-content/themes/vieuxmoulin/resources/css/general/footer.scss
@@ -70,4 +70,20 @@
 ul.footer__partenaire__container{
   flex-direction: row;
   gap: 1rem;
+li{
+  position: relative;
+
+  a {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+  }
+}
 }
